Added tailwind css

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,10 @@
-<div class="mx-auto">
-    <h1>New Commit to the repo</h1>
+<div class="flex justify-center items-center">
+    <div class="taskmanager flex max-h-[70%] max-w-[80%] border border-blue-200">
+        <div class="sidebar w-[30%] bg-white">
+            <h1 class="text-black">List</h1>
+        </div>
+        <div class="tasklist">
+            <h1 class="text-white">Task</h1>
+        </div>
+    </div>
 </div>
