--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    background-image: linear-gradient(to right, #f41365, #e28a3d);
+    height: 100vh;
+    width: 100vw;
+}
