--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
             <input type="password" class="form-control" id="password" placeholder="Password">
           </div>
           <button type="submit" class="btn btn-primary" background-color="pink" >Signup</button>
-        </form>
+        </form>gfgfhgdhjgrjrgh
       </div>
     </div>
   </div>
