--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,27 +9,27 @@
                 </a>
                 <a class="item flex items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1 
                     hover:bg-pink-400  active:bg-pink-600 active:text-red-200">
-                    <p>Project 1</p>
+                    <p>Project 2</p>
                 </a>
 
-                <button class="bg-blue-500 text-white absolute bottom-1 py-2 px-4 rounded">
+                <button class="bg-pink-500 text-white absolute bottom-1 py-2 px-4 rounded">
                     +New Project
                 </button>
 
             </div>
         </div>
-        <div class="bg-blue-300 flex-grow flex w-full flex-col py-8 rounded-r-md">
+        <div class="bg-[#FF69B4] flex-grow flex w-full flex-col py-8 rounded-r-md">
             <h1 class="text-black text-center font-extrabold">Task</h1>
             <div class="grid grid-cols-3 gap-3 px-2">
-                <div class="bg-blue-200 py-2">
+                <div class="bg-white rounded-md py-2 px-1">
                     <h4 class="text-center font-bold">Todo Task list</h4>
                     <p>Task i need to do</p>
                 </div>
-                <div class="bg-blue-200 py-2">
+                <div class="bg-white rounded-md py-2 px-1">
                     <h4 class="text-center font-bold">Ongoing Task List</h4>
                     <p>Task i am currently working on.</p>
                 </div>
-                <div class="bg-blue-200 py-2">
+                <div class="bg-white rounded-md py-2 px-1">
                     <h4 class="text-center font-bold">Completed Task List</h4>
                     <p>Task i have completed.</p>
                 </div>
