Create Project page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
                      hover:bg-pink-400 active:bg-pink-600 active:text-red-200">
                     <p>Project 1</p>
                 </a> -->
-                <a *ngFor="let project of projects" class="item flex px-2 bg-slate-400 items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1 
+                <a *ngFor="let project of projects" class="item flex bg-slate-400 items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1 
                     hover:bg-pink-400 active:text-red-200">
                     {{project.name}}
                 </a>
