--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,34 +1,32 @@
-<p>signup works!</p>
+<p>login works!</p>
 <div style="background-color: rgb(248, 202, 209);" class="container" >
     <h1 class="text-centre" style="color: rgb(250, 140, 158);">
       Platr
      </h1>
     <h2>
-      Create Account
+      Welcome Back
     </h2>
     <h5>
-      Create a new account
+      Login to continue
     </h5 >
     <div flex-col justify-end>
     <form>
-      <P>NAME</P>
-         <input type="name" name="name" placeholder="user name"><br/>
+      
       <p>EMAIL</p>
       <input type="email" name="email" placeholder=".......@gmail.com"><br/>
-      <p>PHONE</p>
-      <input type="number" name="number" placeholder="phone number"><br/>
+      
       <p>PASSWORD</p> 
       <input type="password" name="password" placeholder="******">
     
     </form> </div>
     <br/>
     <b>
-      <button length="50px" style="background-color: pink;" >
-        CREATE ACCOUNT
-      </button>
+     <a routerlink="''" > <button length="50px" style="background-color: pink;" >
+        LOGIN
+      </button></a>
     </b>
     <h6>
-      Already have an account?
-       <a>Login </a>
+      Don't have account? <a routerLink="Signup">create a new account</a>
+       
     </h6>
     </div>
