--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
     </form> </div>
     <br/>
     <b>
-     <a routerlink="''" > <button length="50px" style="background-color: pink;" >
+     <a routerlink="" > <button length="50px" style="background-color: pink;" >
         LOGIN
       </button></a>
     </b>
