--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -23,7 +23,7 @@
     </form> </div>
     <br/>
     <b>
-     <a routerlink="''">
+     <a routerlink="">
        <button length="50px" style="background-color: pink;" >
         CREATE ACCOUNT
       </button>
