change css files to scss and also the schematic

--- a/src/app/pages/home/login/login.component.html
+++ b/src/app/pages/home/login/login.component.html
@@ -1,32 +1,33 @@
 <p>login works!</p>
-<div style="background-color: rgb(248, 202, 209);" class="container" >
-    <h1 class="text-centre" style="color: rgb(250, 140, 158);">
-      Platr
-     </h1>
-    <h2>
-      Welcome Back
-    </h2>
-    <h5>
-      Login to continue
-    </h5 >
-    <div flex-col justify-end>
+<div style="background-color: rgb(248, 202, 209);" class="container">
+  <h1 class="text-centre" style="color: rgb(250, 140, 158);">
+    Platr
+  </h1>
+  <h2>
+    Welcome Back
+  </h2>
+  <h5>
+    Login to continue
+  </h5>
+  <div flex-col justify-end>
     <form>
-      
+
       <p>EMAIL</p>
-      <input type="email" name="email" placeholder=".......@gmail.com"><br/>
-      
-      <p>PASSWORD</p> 
+      <input type="email" name="email" placeholder=".......@gmail.com"><br />
+
+      <p>PASSWORD</p>
       <input type="password" name="password" placeholder="******">
-    
-    </form> </div>
-    <br/>
-    <b>
-      <button length="50px" style="background-color: pink;" >
-        LOGIN
-      </button>
-    </b>
-    <h6>
-      Don't have account? <a href="" create a new account
-       
-    </h6>
-    </div>
+
+    </form>
+  </div>
+  <br />
+  <b>
+    <button length="50px" style="background-color: pink;">
+      LOGIN
+    </button>
+  </b>
+  <h6>
+    Don't have account? create a new account
+
+  </h6>
+</div>
