--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,10 @@
 <div class="centered-content">
     <div class="flex w-full h-full max-h-96 justify-center">
-        <div class="bg-white w-64 flex flex-col py-2 rounded-l-md relative">
+        <div class="bg-white w-64 flex flex-col py-2 px-2 rounded-l-md relative">
             <h1 class="text-black p-2 font-extrabold">Projects</h1>
             <div class="list-menu container flex items-center flex-col flex-grow-1">
-                <!-- <a class="item flex items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1
-                     hover:bg-pink-400 active:bg-pink-600 active:text-red-200">
-                    <p>Project 1</p>
-                </a> -->
-                <a *ngFor="let project of projects" class="item flex bg-slate-400 items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1 
-                    hover:bg-pink-400 active:text-red-200">
+                <a *ngFor="let project of projects" class="item flex bg-pink-300 items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1 
+                    hover:bg-pink-400 active:text-red-200 mx-2">
                     {{project.name}}
                 </a>
 
@@ -21,7 +17,6 @@
             <h1 class="text-black text-center font-extrabold">Task</h1>
             <div class="grid grid-cols-3 gap-3 px-2">
                 <div class="bg-white rounded-md py-2 px-1">
-
                     <h4 class="text-center font-bold">Todo Task</h4>
                     <p>Task i need to do</p>
                 </div>
@@ -32,22 +27,8 @@
                 <div class="bg-white rounded-md py-2 px-1">
                     <h4 class="text-center font-bold">Completed Task</h4>
                     <p>Task completed.</p>
-                    <h4 class="text-center font-bold">Todo Task list</h4>
-                    <p>Task i need to do</p>
-                </div>
-                <div class="bg-white rounded-md py-2 px-1">
-                    <h4 class="text-center font-bold">Ongoing Task List</h4>
-                    <p>Task i am currently working on.</p>
-                </div>
-                <div class="bg-white rounded-md py-2 px-1">
-                    <h4 class="text-center font-bold">Completed Task List</h4>
-                    <p>Task i have completed.</p>
                 </div>
             </div>
-
-            <!-- <div class="tasks bg-slate-300 w-full flex px-4 py-2 rounded mt-2 cursor-pointer">
-                <p class="">something i have to do</p>
-            </div> -->
         </div>
     </div>
 </div>
