--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -7,7 +7,7 @@
             class="w-full  bg-gray-100 text-lg active:border-blue-700 hover:border-blue-500 hover:border-2 rounded-md px-2 py-1">
 
         <div class="flex items-end justify-end space-x-2 mt-5">
-            <button class="rounded-md text-lg px-2 py-1 border" routerLink="/">Cancel</button>
+            <button class="rounded-md text-lg px-2 py-1 border" routerLink="/home">Cancel</button>
             <button class="bg-blue-500 text-white rounded-md text-lg px-2 py-1"
                 (click)="createNewProject(projectTitle.value)">Create</button>
         </div>
