--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,7 @@
-<p>login works!</p>
-<div style="background-color: rgb(248, 202, 209);" class="container" >
+
+<div class="centered-content"> 
+<div style="background-color: rgb(248, 202, 209);" class="flex w-full h-full max-h-96 justify-center">
+  <div class="list-menu container flex items-center flex-col flex-grow-1">
     <h1 class="text-centre" style="color: rgb(250, 140, 158);">
       Platr
      </h1>
@@ -13,7 +15,7 @@
     <form>
       
       <p>EMAIL</p>
-      <input type="email" name="email" placeholder=".......@gmail.com"><br/>
+      <input type="email" name="email" placeholder=" "><br/>
       
       <p>PASSWORD</p> 
       <input type="password" name="password" placeholder="******">
@@ -29,4 +31,4 @@
       Don't have account? <a routerLink="Signup">create a new account</a>
        
     </h6>
-    </div>
+    </div></div></div>
