--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,3 +1,5 @@
+<div class="centered-content">
+  <div class="flex w-full h-full max-h-96 justify-center">
 <div style="background-color: rgb(248, 202, 209);" class="container" >
     <h1 class="text-centre" style="color: rgb(250, 140, 158);">
       Platr
@@ -32,4 +34,4 @@
       Already have an account?
        <a routerlink="login" >Login </a>
     </h6>
-    </div>
+    </div></div></div>
