--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,5 @@
-<p>login works!</p>
+<div class="centered-content">
+  <div class="flex w-full h-full max-h-96 justify-center">
 <div style="background-color: rgb(248, 202, 209);" class="container" >
     <h1 class="text-centre" style="color: rgb(250, 140, 158);">
       Platr
@@ -13,7 +14,7 @@
     <form>
 
       <p>EMAIL</p>
-      <input type="email" name="email" placeholder=".......@gmail.com"><br/>
+      <input type="email" name="email" placeholder=" "><br/>
       
       <p>PASSWORD</p> 
       <input type="password" name="password" placeholder="******">
@@ -30,4 +31,4 @@
       Don't have account? <a routerLink="Signup">create a new account</a>
        
     </h6>
-    </div>
+    </div></div></div>
