--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,15 +5,20 @@ input{
     height: 10px;
     
 }
+button{
+    padding: 10px;
+    
+}
 *{
     margin: 0%;
 }
 
-p{
+*{
     font-size: 18px;
 }
 .cotainer{
     height: 600px;
+    width: 450px;
 }
 *{
     text-align: center;
