--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,31 +1,30 @@
 <div class="centered-content">
-    <div class="flex w-full h-full max-h-96 justify-center">
-        <div class="bg-white w-64 flex flex-col py-2 px-2 rounded-l-md relative">
-            <h1 class="text-black p-2 font-extrabold">Projects</h1>
-            <div class="list-menu container flex items-center flex-col flex-grow-1">
-                <a *ngFor="let project of projects" class="item flex bg-pink-300 items-center justify-center px-2 py-4 rounded-md w-full text-[#5f5f5f] mb-1 
-                    hover:bg-pink-400 active:text-red-200 mx-2">
+    <div class="home">
+        <div class="project-container">
+            <h1 class="title">Projects</h1>
+            <div class="project">
+                <a *ngFor="let project of projects" class="project-link">
                     {{project.name}}
                 </a>
 
-                <button class="bg-pink-500 text-white absolute bottom-1 py-2 px-4 rounded" routerLink="/new-list">
+                <button class="button" routerLink="/new-list">
                     +New Project
                 </button>
             </div>
         </div>
-        <div class="bg-[#FF69B4] flex-grow flex w-full flex-col py-8 rounded-r-md">
-            <h1 class="text-black text-center font-extrabold">Task</h1>
-            <div class="grid grid-cols-3 gap-3 px-2">
-                <div class="bg-white rounded-md py-2 px-1">
-                    <h4 class="text-center font-bold">Todo Task</h4>
+        <div class="task-container">
+            <h1 class="title">Task</h1>
+            <div class="task-grid">
+                <div class="task-status">
+                    <h4 class="status">Todo Task</h4>
                     <p>Task i need to do</p>
                 </div>
-                <div class="bg-white rounded-md py-2 px-1">
-                    <h4 class="text-center font-bold">Ongoing Task</h4>
+                <div class="task-status">
+                    <h4 class="status">Ongoing Task</h4>
                     <p>Currently Ongoing.</p>
                 </div>
-                <div class="bg-white rounded-md py-2 px-1">
-                    <h4 class="text-center font-bold">Completed Task</h4>
+                <div class="task-status">
+                    <h4 class="status">Completed Task</h4>
                     <p>Task completed.</p>
                 </div>
             </div>
