--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,46 +1,49 @@
 <div class="centered-content">
   <div class="flex w-full h-full max-h-96 justify-center">
-<div style="background-color: rgb(248, 202, 209);" class="container" >
-  <div style="background-color: rgb(248, 202, 209);" class="container" >
-  <h1 class="text-centre" style="color: rgb(250, 140, 158);">
-    Platr
-  </h1>
-  <h2>
-    Welcome
-  </h2>
-  <h5>
-    Login to continue
-  </h5>
- 
-    <h1 class="text-centre" style="color: rgb(250, 140, 158);">
-      Platr
-     </h1>
-    <h2>
-      Welcome Back
-    </h2>
-    <h5>
-      Login to continue
-    </h5 >
-    <div flex-col justify-end>
-    <form>
+    <div style="background-color: rgb(248, 202, 209);" class="container">
+      <div style="background-color: rgb(248, 202, 209);" class="container">
+        <h1 class="text-centre" style="color: rgb(250, 140, 158);">
+          Platr
+        </h1>
+        <h2>
+          Welcome
+        </h2>
+        <h5>
+          Login to continue
+        </h5>
 
-      <p>EMAIL</p>
-      <input type="email" name="email" placeholder=" "><br/>
-      
-      <p>PASSWORD</p> 
-      <input type="password" name="password" placeholder="******">
+        <h1 class="text-centre" style="color: rgb(250, 140, 158);">
+          Platr
+        </h1>
+        <h2>
+          Welcome Back
+        </h2>
+        <h5>
+          Login to continue
+        </h5>
+        <div flex-col justify-end>
+          <form>
 
-    </form>
+            <p>EMAIL</p>
+            <input type="email" name="email" placeholder=" "><br />
+
+            <p>PASSWORD</p>
+            <input type="password" name="password" placeholder="******">
+
+          </form>
+        </div>
+        <br />
+        <b>
+          <button length="50px" style="background-color: pink;" routerLink="/home">
+            LOGIN
+          </button>
+        </b>
+        <h6>
+          Don't have account?<a (click)="navigateTo()">create a new account</a>
+        </h6>
+      </div>
+    </div>
   </div>
-  <br />
-  <b>
-    <button length="50px" style="background-color: pink;" routerLink="/home">
-      LOGIN
-    </button>
-  </b>
-  <h6>
-    Don't have account?<a (click)="navigateTo()">create a new account</a>
-  </h6>
 </div>
-    </div></div></div>
 
+0
