--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -27,7 +27,7 @@
         </button>
       </b>
       <h6>
-        Don't have an account? <a href="#" onclick="navigateTo()">Create a new account</a>
+        Don't have an account? <a href="signup" onclick="navigateTo()">Create a new account</a>
       </h6>
     </div>
   </div>
