--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -15,6 +15,7 @@ text-align: center;
 border-radius: 8px;
 width: 100%;
 max-width: 400px;
+height: 510px;
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 #logo {
