--- a/src/app/pages/newBucket/new-list.component.html
+++ b/src/app/pages/newBucket/new-list.component.html
@@ -3,11 +3,11 @@
         <h1 class="">
             Create a new project
         </h1>
-        <input #projectTitle type="text" placeholder="Create new project" class="project-title">
+        <input #bucketTitle type="text" placeholder="Create new project" class="project-title">
 
         <div class="flex items-end justify-end space-x-2 mt-5">
             <button class="button cancel-button" routerLink="/home">Cancel</button>
-            <button class="button create-button" (click)="createNewProject(projectTitle.value)">Create</button>
+            <button class="button create-button" (click)="createNewBucket(bucketTitle.value)">Create</button>
         </div>
     </div>
 </div>
