--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,18 +11,18 @@
         Login to Continue
       </h5>
       <div class="flex-col justify-end">
-        <form>
+        <form  [formGroup]="form">
           <label for="email">EMAIL</label>
-          <input type="email" id="email" name="email" placeholder=" "><br />
+          <input type="email" id="email" name="email" placeholder=" " [formControlName]="'email'"><br />
 
           <label for="password">PASSWORD</label>
-          <input type="password" id="password" name="password" placeholder="******">
+          <input type="password" id="password" name="password" placeholder="******" [formControlName]="'password'">
         </form>
       </div>
 
       <br />
       <b>
-        <button class="login-button" routerLink="/home">
+        <button class="login-button" routerLink="/home", (click)="login()">
           LOGIN
         </button>
       </b>
