auth guard and new task component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
 
-                <button class="button" routerLink="/new-list">
+                <button class="button" routerLink="/new-bucket">
                     + New Project
                 </button>
             </div>
