--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,8 +8,9 @@
 
 .project-container {
     background-color: #fff;
-    width: 16rem;
+    width: 30%;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     padding: 0.5rem;
     border-top-left-radius: 0.375rem;
@@ -19,7 +20,6 @@
 
 .project {
     display: flex;
-    align-items: center;
     flex-direction: column;
 
     .project-status {
@@ -36,6 +36,10 @@
         padding: 0;
     }
 
+    .project-link.active {
+        background-color: #fc6c85;
+    }
+
     .project-link {
         display: flex;
         align-items: center;
@@ -50,7 +54,7 @@
         transition: background-color 0.3s, transform 0.2s;
 
         &:hover {
-            background-color: #f0f0f0;
+            background-color: #fc6c85;
             transform: scale(1.02);
 
             .pen-icon {
@@ -72,21 +76,6 @@
         }
     }
 
-    .button {
-        background-color: #FF69B4;
-        color: #fff;
-        padding: 0.5rem 1rem;
-        border-radius: 0.25rem;
-        text-decoration: none;
-        cursor: pointer;
-        margin-top: 0.5rem;
-        margin-bottom: 1rem;
-        transition: background-color 0.3s;
-
-        &:hover {
-            background-color: #FF6C8C;
-        }
-    }
 }
 
 .task-container {
