Added user's name to the board

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,10 @@
 <div class="centered-content">
+
+    <div class="user-info">
+        <h3>{{userName}} Dashboard</h3>
+        <span (click)="logout()">LogOut <i class="logout-icon fas fa-sign-out-alt"></i></span>
+    </div>
+
     <div class="home">
         <div class="project-container">
             <h1 class="title">Projects</h1>
