--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ body {
 
 .centered-content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 90dvw;
