--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -33,6 +33,7 @@
 .project-container {
     background-color: #fff;
     width: 30%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -44,6 +45,8 @@
 
 .project {
     display: flex;
+    flex-grow: 1;
+    overflow-y: auto;
     flex-direction: column;
 
     .project-status {
