--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,5 @@ body {
         background-color: #FF6C8C;
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
