--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -114,6 +114,7 @@
     border-top-right-radius: 0.25rem;
     border-bottom-right-radius: 0.25rem;
     width: 100%;
+    height: 100%;
 
 
 }
@@ -129,16 +130,19 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 0.75rem;
     padding: 0 0.5rem;
+    height: 100%;
 
 
 }
 
 .task-status {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     border-radius: 0.375rem;
     padding: 0.5rem 0.25rem 0.5rem 0.25rem;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-    max-height: 300px;
+    min-height: 100%;
     overflow-y: auto;
 }
 
@@ -169,6 +173,10 @@
 .task-list {
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: auto;
 
     .task-link {
         display: flex;
@@ -176,7 +184,7 @@
         justify-content: center;
         padding: 0.5rem 1rem;
         margin-bottom: 0.5rem;
-        border-radius: 0.25rem;
+        border-bottom: 0.25rem;
         width: 100%;
         color: #5f5f5f;
         background-color: #FFC0CB;
