cahnge cancel button re-routing path

--- a/src/app/pages/newBucket/new-bucket.component.html
+++ b/src/app/pages/newBucket/new-bucket.component.html
@@ -6,7 +6,7 @@
         <input #bucketTitle type="text" placeholder="Create new project" class="project-title">
 
         <div class="flex items-end justify-end space-x-2 mt-5">
-            <button class="button cancel-button" routerLink="/home">Cancel</button>
+            <button class="button cancel-button" routerLink="/bucket">Cancel</button>
             <button class="button create-button" (click)="createNewBucket(bucketTitle.value)">Create</button>
         </div>
     </div>
