--- a/src/app/pages/newTask/new-task.component.html
+++ b/src/app/pages/newTask/new-task.component.html
@@ -6,7 +6,7 @@
         <input #taskTitle type="text" placeholder="Create new task" class="project-title">
 
         <div class="flex items-end justify-end space-x-2 mt-5">
-            <button class="button cancel-button" routerLink="/home">Cancel</button>
+            <button class="button cancel-button" routerLink="/bucket">Cancel</button>
             <button class="button create-button" (click)="createNewTask(taskTitle.value)">Create</button>
         </div>
     </div>
